assets/css/main.css
/* ... */
@media screen and (max-width: 480px) {

	.row {
		display: flex;
		flex-wrap: wrap;
		box-sizing: border-box;
		align-items: stretch;
	}

	.row>* {
		box-sizing: border-box;
	}

	.row.gtr-uniform>*> :last-child {
		margin-bottom: 0;
	}

	.row.aln-left {
		justify-content: flex-start;
	}

	.row.aln-center {
		justify-content: center;
	}

	.row.aln-right {
		justify-content: flex-end;
	}

	.row.aln-top {
		align-items: flex-start;
	}

	.row.aln-middle {
		align-items: center;
	}

	.row.aln-bottom {
		align-items: flex-end;
	}

	.row>.imp-xsmall {
		order: -1;
	}

	.row>.col-1-xsmall {
		width: 8.33333%;
	}

	.row>.off-1-xsmall {
		margin-left: 8.33333%;
	}

	.row>.col-2-xsmall {
		width: 16.66667%;
	}

	.row>.off-2-xsmall {
		margin-left: 16.66667%;
	}

	.row>.col-3-xsmall {
		width: 25%;
	}

	.row>.off-3-xsmall {
		margin-left: 25%;
	}

	.row>.col-4-xsmall {
		width: 33.33333%;
	}

	.row>.off-4-xsmall {
		margin-left: 33.33333%;
	}

	.row>.col-5-xsmall {
		width: 41.66667%;
	}

	.row>.off-5-xsmall {
		margin-left: 41.66667%;
	}

	.row>.col-6-xsmall {
		width: 50%;
	}

	.row>.off-6-xsmall {
		margin-left: 50%;
	}

	.row>.col-7-xsmall {
		width: 58.33333%;
	}

	.row>.off-7-xsmall {
		margin-left: 58.33333%;
	}

	.row>.col-8-xsmall {
		width: 66.66667%;
	}

	.row>.off-8-xsmall {
		margin-left: 66.66667%;
	}

	.row>.col-9-xsmall {
		width: 75%;
	}

	.row>.off-9-xsmall {
		margin-left: 75%;
	}

	.row>.col-10-xsmall {
		width: 83.33333%;
	}

	.row>.off-10-xsmall {
		margin-left: 83.33333%;
	}

	.row>.col-11-xsmall {
		width: 91.66667%;
	}

	.row>.off-11-xsmall {
		margin-left: 91.66667%;
	}

	.row>.col-12-xsmall {
		width: 100%;
	}

	.row>.off-12-xsmall {
		margin-left: 100%;
	}

	.row.gtr-0 {
		margin-top: 0;
		margin-left: 0em;
	}

	.row.gtr-0>* {
		padding: 0 0 0 0em;
	}

	.row.gtr-0.gtr-uniform {
		margin-top: 0em;
	}

	.row.gtr-0.gtr-uniform>* {
		padding-top: 0em;
	}

	.row.gtr-25 {
		margin-top: 0;
		margin-left: -0.625em;
	}

	.row.gtr-25>* {
		padding: 0 0 0 0.625em;
	}

	.row.gtr-25.gtr-uniform {
		margin-top: -0.625em;
	}

	.row.gtr-25.gtr-uniform>* {
		padding-top: 0.625em;
	}

	.row.gtr-50 {
		margin-top: 0;
		margin-left: -1.25em;
	}

	.row.gtr-50>* {
		padding: 0 0 0 1.25em;
	}

	.row.gtr-50.gtr-uniform {
		margin-top: -1.25em;
	}

	.row.gtr-50.gtr-uniform>* {
		padding-top: 1.25em;
	}

	.row {
		margin-top: 0;
		margin-left: -2.5em;
	}

	.row>* {
		padding: 0 0 0 2.5em;
	}

	.row.gtr-uniform {
		margin-top: -2.5em;
	}

	.row.gtr-uniform>* {
		padding-top: 2.5em;
	}

	.row.gtr-150 {
		margin-top: 0;
		margin-left: -3.75em;
	}

	.row.gtr-150>* {
		padding: 0 0 0 3.75em;
	}

	.row.gtr-150.gtr-uniform {
		margin-top: -3.75em;
	}

	.row.gtr-150.gtr-uniform>* {
		padding-top: 3.75em;
	}

	.row.gtr-200 {
		margin-top: 0;
		margin-left: -5em;
	}

	.row.gtr-200>* {
		padding: 0 0 0 5em;
	}

	.row.gtr-200.gtr-uniform {
		margin-top: -5em;
	}

	.row.gtr-200.gtr-uniform>* {
		padding-top: 5em;
	}

}

/* Section/Article */

section.special,
article.special {
	text-align: center;
}

header p {
	color: #ffffff;
	position: relative;
	margin: 0 0 1.5em 0;
}

header h2+p {
	font-size: 1.25em;
	margin-top: -1em;
	line-height: 1.75em;
}

header h3+p {
	font-size: 1.1em;
	margin-top: -0.8em;
	line-height: 1.75em;
}

header h4+p,
header h5+p,
header h6+p {
	font-size: 0.9em;
	margin-top: -0.6em;
	line-height: 1.5em;
}

header.major {
	margin: 4em 0 4em 0;
	position: relative;
	text-align: center;
}

header.major:after {
	background: orangered;
	content: '';
	display: inline-block;
	height: 0.2em;
	max-width: 20em;
	width: 75%;
}

/* Typewriter effect for Title */

.typed-out {
	overflow: hidden;
	border-right: .1em solid;
	white-space: nowrap;
	font-size: 1.6rem;
	width: 0;
	animation:
		typing 5s steps(20, end) forwards infinite,
		blink 1s infinite;
}

@keyframes typing {
	0% {
		width: 0
	}

	25% {
		width: 50%
	}

	50%,
	100% {
		width: 100%
	}
}

@keyframes blink {
	from {
		border-color: transparent
	}

	to {
		border-color: #ff5722;
	}
}

footer.major {
	margin: 4em 0 0 0;
}

/* Timeline animation */
.timeline_body {
	font-family: inherit;
	font-size: 16px;
	line-height: 1.75;
}

#timeline {
	display: flex;
	align-items: stretch;
	background-color: #031625;
}

#timeline:hover .tl-item {
	width: 15%;
}

.tl-item {
	transform: translate3d(0, 0, 0);
	position: relative;
	width: 20%;
	min-height: max(42rem, 100dvh);
	color: #fff;
	overflow: hidden;
	transition: width 0.5s ease;
}

.tl-item:before,
.tl-item:after {
	transform: translate3d(0, 0, 0);
	content: '';
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
}

.tl-item:after {
	background: rgba(3, 22, 37, 0.15);
	opacity: 1;
	transition: opacity 0.5s ease;
}

.tl-item:before {
	background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.85) 48%, rgba(0, 0, 0, 1) 100%);
	z-index: 1;
	opacity: 0;
	transform: translate3d(0, 0, 0) translateY(50%);
	transition: opacity 0.5s ease, transform 0.5s ease;
}

.tl-item:hover {
	width: 40% !important;
}

.tl-item:hover:after {
	opacity: 0;
}

.tl-item:hover:before {
	opacity: 1;
	transform: translate3d(0, 0, 0) translateY(0);
	transition: opacity 1s ease, transform 1s ease 0.25s;
}

.tl-item:hover .tl-content {
	opacity: 1;
	transform: translateY(0);
	transition: all 0.75s ease 0.5s;
}

.tl-item:hover .tl-bg {
	filter: grayscale(0);
}

.tl-content {
	transform: translate3d(0, 0, 0) translateY(25px);
	position: absolute;
	top: 52%;
	right: 0;
	left: 0;
	z-index: 2;
	text-align: center;
	margin: 1em 1.618em;
	padding: 0;
	opacity: 0;
	box-sizing: border-box;
}

.tl-content h1 {
	font-family: 'Pathway Gothic One', Helvetica Neue, Helvetica, Arial, sans-serif;
	text-transform: uppercase;
	color: #1779cf;
	font-size: 2rem;
	font-weight: normal;
	margin-bottom: 0.5em;
}

.tl-content p {
	margin-bottom: 0;
}

.tl-content > div {
	margin-top: 0.75em;
	width: 100%;
}

.tl-content .actions {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: 0.5em;
	margin: 0;
}
/* ... */

